# esp32s3-modbus-rtu

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_MEMORY.md  QA_REPORT.md  QC_REPORT.md  README.md  required_components.json  sdkconfig.defaults
.github/workflows/: ci.yml
docs/: README.md
include/: modbus.h  mqtt.h  wifi.h
main/: CMakeLists.txt  main.c  modbus.c  mqtt.c  wifi.c
main/include/: modbus.h  mqtt.h  wifi.h
src/: main.c  modbus.c  mqtt.c  wifi.c
src/test/: modbus_test.c  wifi_test.c
tests/: README.md  modbus_test.c  mqtt_test.c
